Complete SignUp layout

--- a/sass/helpers/_mixin.scss
+++ b/sass/helpers/_mixin.scss
@@ -4,13 +4,16 @@
     background-color: $bg;
     color: $color;
     cursor: pointer;
-    padding: 0 3rem;
+    padding: 12px 50px;
     border-radius: 60px;
+    border: $border-width solid $orange-100;
     transition: all 0.5s;
     box-shadow: $shadow;
+    font-family:"Audiowide", sans-serif; ;
     &:hover{
         background-color: $bg-hover;
         color: $color-hover;
+        border-color: $yellow-100;
     }
 }
 
@@ -19,4 +22,26 @@
     font-weight: $fw;
     color: $color;
     text-transform: $transform;
+}
+
+@mixin styleInput ($pd, $fs, $bg,$bd,$bdr){
+    padding: $pd;
+    font-size: $fs;
+    line-height: 26px;
+    background-color: $bg;
+    border: $bd;
+    border-radius: $bdr;
+    transition: all .5s;
+        &::placeholder{
+        color:$grey-300;
+        font-size: $text-base;
+        line-height: inherit;
+        margin: 0;
+        padding: 0;
+       }
+       &:focus{
+        box-shadow: none;
+        outline: none;
+        padding: 10px 10px;
+       }
 }
