--- a/sass/helpers/_variable.scss
+++ b/sass/helpers/_variable.scss
@@ -3,10 +3,14 @@ $blue-100:#4A6D97;
 $black-100:#191919;
 $yellow-100:#FBBF18;
 $orange-100: #E1680B;
+$grey-100: #F0F0F0;
+$grey-200:#CCCCCC;
+$grey-300:#757575;
 $color:#ffffff;
 
 // FONT SIZE
 $text-title: 55px;
+$text:12px;
 $text-sm: 14px;
 $text-base: 16px;
 $text-lg: 18px;
@@ -14,4 +18,8 @@ $text-xl:20px;
 $text-2xl:24px;
 $text-3xl:28px;
 $text-4xl:35px;
+
+//Margin, padding
+$mr-100: 100px;
+$mr-50: 50px;
 
