--- a/view/auth/register.html
+++ b/view/auth/register.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="shortcut icon" href="image/icon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../../image/icon.png" type="image/x-icon" />
     <!-- Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -46,7 +46,7 @@
     />
 
     <!-- CSS MAIN  -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
   </head>
 
   <body>
@@ -78,7 +78,7 @@
               <a href="#">Login</a>
             </li>
             <li>
-              <a href="view/auth/register.html">Register</a>
+              <a href="#">Register</a>
             </li>
           </ul>
         </div>
@@ -89,7 +89,7 @@
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"
-              ><img src="./image/logo.svg" alt="logo" />
+              ><img src="../../image/logo.svg" alt="logo" />
             </a>
             <button
               class="navbar-toggler"
@@ -164,14 +164,92 @@
       </div>
     </header>
     <!-- BODY  -->
-    <h1>place footer here</h1>
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <section class="registerForm mx-auto">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-8">
+            <div class="register_content">
+              <form id="frmSignIn">
+                <div class="title_form text-center">
+                  <h1>Sign Up</h1>
+                  <p>Already have an account? <a href="#">Sign In</a></p>
+                </div>
+                <div class="mb-3">
+                  <input
+                    type="email"
+                    class="form-control form-control-sm mb-4"
+                    name=""
+                    id="txtEmail"
+                    aria-describedby="helpId"
+                    placeholder="Email"
+                  />
+                  <input
+                    type="text"
+                    class="form-control form-control-sm mb-4"
+                    name=""
+                    id="txtName"
+                    aria-describedby="helpId"
+                    placeholder="Name"
+                  />
+                  <input
+                    type="phone"
+                    class="form-control form-control-sm mb-4"
+                    name=""
+                    id="txtPhone"
+                    aria-describedby="helpId"
+                    placeholder="Phone"
+                  />
+                  <input
+                    type="text"
+                    class="form-control form-control-sm mb-4"
+                    name=""
+                    id="txtPassword"
+                    aria-describedby="helpId"
+                    placeholder="Password"
+                  />
+                  <input
+                    type="text"
+                    class="form-control form-control-sm mb-4"
+                    name=""
+                    id="txtPassCf"
+                    aria-describedby="helpId"
+                    placeholder="Password confirm"
+                  />
+                  <div class="text-center">
+                    <div class="form-check form-check-inline">
+                      <label class="form-check-label" for="">Gender</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="selector"
+                        id="radMale"
+                        value="Male"
+                      />
+                      <label class="form-check-label" for="">Male</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="selector"
+                        id="radFemale"
+                        value="Female"
+                      />
+                      <label class="form-check-label" for="">Female</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="btnGroup">
+                  <button type="submit" class="btn-orange">Create</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- FOOTER  -->
     <footer>
       <div class="footer--sub">
@@ -179,7 +257,7 @@
           <div class="footer--text row">
             <div class="footer_item1 col-lg-4 col-sm-6">
               <div class="archives list-before-icon">
-                <img src="./image/logo.svg" alt="footer_logo" />
+                <img src="../../image/logo.svg" alt="footer_logo" />
                 <p>
                   1245, North Western Street<br />
                   Europia. Lumbio
@@ -304,7 +382,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- back to top cody house js  -->
-    <script src="./js/back-to-top-master/assets/js/util.js"></script>
-    <script src="./js/back-to-top-master/assets/js/main.js"></script>
+    <script src="../../js/back-to-top-master/assets/js/util.js"></script>
+    <script src="../../js/back-to-top-master/assets/js/main.js"></script>
   </body>
 </html>
