--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ a {
   margin: 0 auto;
 }
 
+h1 {
+  font-size: 35px;
+  font-family: "Audiowide", sans-serif;
+}
+
 .header--top {
   background-color: #4A6D97;
   padding: 11px;
@@ -244,4 +249,84 @@ body .cd-top--is-visible {
 }
 body .cd-top--fade-out {
   opacity: 0.5;
+}
+
+.registerForm {
+  margin: 100px 0;
+}
+.registerForm input[type=text],
+.registerForm input[type=email],
+.registerForm input[type=number],
+.registerForm input[type=phone] {
+  padding: 10px 30px;
+  font-size: 16px;
+  line-height: 26px;
+  background-color: #ffffff;
+  border: 1px solid #CCCCCC;
+  border-radius: 50px;
+  transition: all 0.5s;
+}
+.registerForm input[type=text]::-moz-placeholder, .registerForm input[type=email]::-moz-placeholder, .registerForm input[type=number]::-moz-placeholder, .registerForm input[type=phone]::-moz-placeholder {
+  color: #757575;
+  font-size: 16px;
+  line-height: inherit;
+  margin: 0;
+  padding: 0;
+}
+.registerForm input[type=text]::placeholder,
+.registerForm input[type=email]::placeholder,
+.registerForm input[type=number]::placeholder,
+.registerForm input[type=phone]::placeholder {
+  color: #757575;
+  font-size: 16px;
+  line-height: inherit;
+  margin: 0;
+  padding: 0;
+}
+.registerForm input[type=text]:focus,
+.registerForm input[type=email]:focus,
+.registerForm input[type=number]:focus,
+.registerForm input[type=phone]:focus {
+  box-shadow: none;
+  outline: none;
+  padding: 10px 10px;
+}
+.registerForm input[type=radio] {
+  background-color: #E1680B;
+  font-size: 24px;
+}
+.registerForm label {
+  font-size: 24px;
+}
+.registerForm .register_content {
+  background-color: #F0F0F0;
+  padding: 40px;
+}
+.registerForm .register_content .btnGroup {
+  margin: auto;
+  text-align: center;
+}
+.registerForm .register_content .btnGroup .btn-orange {
+  background-color: #E1680B;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 12px 50px;
+  border-radius: 60px;
+  border: 1px solid #E1680B;
+  transition: all 0.5s;
+  box-shadow: none;
+  font-family: "Audiowide", sans-serif;
+}
+.registerForm .register_content .btnGroup .btn-orange:hover {
+  background-color: #FBBF18;
+  color: black;
+  border-color: #FBBF18;
+}
+.registerForm .title_form a {
+  font-family: "Audiowide", sans-serif;
+  color: black;
+  transition: all 0.5s;
+}
+.registerForm .title_form a:hover {
+  color: #FBBF18;
 }/*# sourceMappingURL=style.css.map */
