--- a/sass/base/_custom.scss
+++ b/sass/base/_custom.scss
@@ -1,11 +1,11 @@
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-.container{
-    max-width: 1140px;
-    margin: 0 auto;
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
 }
-h1{
-    font-size: $text-4xl;
-    font-family: "Audiowide", sans-serif;
+.custom-fluid {
+  padding: 0 2rem;
 }
