--- a/sass/helpers/_variable.scss
+++ b/sass/helpers/_variable.scss
@@ -1,25 +1,31 @@
-
-$blue-100:#4A6D97;
-$black-100:#191919;
-$yellow-100:#FBBF18;
-$orange-100: #E1680B;
-$grey-100: #F0F0F0;
-$grey-200:#CCCCCC;
-$grey-300:#757575;
-$color:#ffffff;
+$blue-100: #4a6d97;
+$black-100: #191919;
+$yellow-100: #fbbf18;
+$orange-100: #e1680b;
+$grey-100: #f0f0f0;
+$grey-200: #cccccc;
+$grey-300: #757575;
+$color: #ffffff;
 
 // FONT SIZE
 $text-title: 55px;
-$text:12px;
+$text: 12px;
+$text-tiny: 10px;
 $text-sm: 14px;
 $text-base: 16px;
 $text-lg: 18px;
-$text-xl:20px;
-$text-2xl:24px;
-$text-3xl:28px;
-$text-4xl:35px;
+$text-xl: 20px;
+$text-2xl: 24px;
+$text-3xl: 28px;
+$text-4xl: 35px;
+$text-5xl: 40px;
 
 //Margin, padding
 $mr-100: 100px;
 $mr-50: 50px;
-
+$mr-60: 60px;
+$mr-25: 25px;
+$pd-100: 100px;
+$pd-50: 50px;
+$pd-25: 25px;
+$pd-60: 60px;
