--- a/view/auth/register.html
+++ b/view/auth/register.html
@@ -137,7 +137,7 @@
                   <a class="nav-link" href="#">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="../pages/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">About</a>
@@ -164,15 +164,17 @@
       </div>
     </header>
     <!-- BODY  -->
-    <section class="registerForm mx-auto">
+    <section class="registerForm mx-auto pd-100">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-xl-8">
             <div class="register_content">
               <form id="frmSignIn">
                 <div class="title_form text-center">
-                  <h1>Sign Up</h1>
-                  <p>Already have an account? <a href="#">Sign In</a></p>
+                  <h2>Sign Up</h2>
+                  <p class="mb-3">
+                    Already have an account? <a href="#">Sign In</a>
+                  </p>
                 </div>
                 <div class="mb-3">
                   <input
@@ -382,7 +384,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- back to top cody house js  -->
-    <script src="../../js/back-to-top-master/assets/js/util.js"></script>
-    <script src="../../js/back-to-top-master/assets/js/main.js"></script>
+    <script src="../../vendor/back-to-top-master/assets/js/util.js"></script>
+    <script src="../../vendor/back-to-top-master/assets/js/main.js"></script>
   </body>
 </html>
