--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -4,3 +4,9 @@
     box-sizing: border-box;
     font-family: "Outfit", sans-serif;
 }
+
+a,p,span,pre,ul,li {
+    margin: 0;
+    padding: 0;
+}
+
