--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,11 @@
 @import './base/reset';
 @import './helpers/variable';
 @import './helpers/mixin';
+@import'./helpers/util';
 @import './base/custom';
 @import './layouts/headertop';
 @import './layouts/headerbottom';
 @import './layouts/footer';
 @import './layouts/backtotop';
 @import './layouts/register';
+@import './layouts/contact';
