--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,5 +4,14 @@
 @import './base/custom';
 @import './layouts/headertop';
 @import './layouts/headerbottom';
+@import './layouts/carousel';
+@import './layouts/product';
+@import './layouts/pick';
+@import './layouts/deals';
+@import './layouts/brand';
+@import './layouts/suggest';
+@import './layouts/question';
+@import './layouts/news';
+@import './layouts/support';
 @import './layouts/footer';
 @import './layouts/backtotop';
