--- a/sass/layouts/_headertop.scss
+++ b/sass/layouts/_headertop.scss
@@ -60,4 +60,44 @@
         
     }
 };
+@media (max-width: $breakpoint-md) {
+    .content {
+        flex-direction: column;
+        align-items: center;
+
+        .header--left, .header--right {
+            padding: 0;
+            ul {
+                justify-content: center;
+                li {
+                    a {
+                        margin-right: 5px;
+                        width: 25px;
+                        height: 25px;
+                        line-height: 25px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: $breakpoint-sm) {
+    .content {
+        .header--left, .header--right {
+            ul {
+                li {
+                    a {
+                        margin-right: 3px;
+                        width: 20px;
+                        height: 20px;
+                        line-height: 20px;
+                        font-size: $text-sm;
+                    }
+                }
+            }
+        }
+    }
+}
+
 
