--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,5 +4,8 @@
 @import './base/custom';
 @import './layouts/headertop';
 @import './layouts/headerbottom';
+@import './layouts/carouseldetail';
+@import './layouts/detailproduct';
+@import './layouts/productshoedetail';
 @import './layouts/footer';
 @import './layouts/backtotop';
