--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -53,7 +53,7 @@ footer{
                     position: absolute;
                     background-color: $orange-100;
                     color: $color;
-                    right: 180px;
+                    right: 210px;                 
                     width: 38px;
                     height: 38px;
                     border-radius: 8px;
@@ -101,3 +101,148 @@ footer{
     }
 }
 }
+
+  // Responsive styles
+  @media (max-width: $breakpoint-lg) {
+    footer {
+        padding: 0;
+      .footer--sub .container-fluid .footer--text {
+        flex-direction: column;
+        align-items: left;
+  
+        .footer_item1{
+            width: 100%;
+            text-align: left;
+            
+        }
+        .footer_item2{
+            width: 100%;
+          text-align: left;
+        }
+        .footer_item3 {
+          width: 100%;
+          text-align: left;
+          h6{
+            margin-left: 0;
+          }
+          
+         
+  
+          .about {
+            .form-email {
+              .form-input-email {
+                margin-right: 0;
+                margin-bottom: 10px;
+              }
+              .btnEmail{
+                left: 400px;
+                width: 38px;
+                height: 38px;
+              }
+            }
+            .socail-icon{
+                ul{
+                    padding-left: 0;
+                }
+                
+            }
+          }
+        }
+      }
+    }
+  }
+  
+  @media (max-width: $breakpoint-md) {
+    footer {
+        padding: 0;
+      .footer--sub .container-fluid .footer--text {
+        .footer_item1,
+        .footer_item2,
+        .footer_item3 {
+        //   .list-before-icon img {
+        //     max-width: 80px;
+        //   }
+  
+          .categories,
+          .contact,
+          .about {
+            h6 {
+              font-size: 1rem;
+            }
+  
+            ul li a {
+              font-size: 0.9rem;
+            }
+          }
+  
+          .about {
+            .form-email {
+              .form-input-email input {
+                font-size: 0.9rem;
+                padding: 5px;
+              }
+  
+              .btnEmail{
+                left: 360px;
+                width: 33px;
+                height: 33px;
+               i {
+                font-size: 1rem;
+              }
+            }
+            }
+          }
+        }
+      }
+    }
+  }
+  
+  @media (max-width: $breakpoint-sm) {
+    footer {
+        text-align: left;
+        padding: 0;
+      .footer--sub {
+        margin: 40px;
+        .container-fluid .footer--text {
+        .footer_item1,
+        .footer_item2,
+        .footer_item3 {
+        //   .list-before-icon img {
+        //     max-width: 60px;
+        //   }
+  
+          .categories,
+          .contact,
+          .about {
+            h6 {
+              font-size: 0.9rem;
+            }
+  
+            ul li a {
+              font-size: 0.8rem;
+            }
+          }
+  
+          .about {
+            .form-email {
+              .form-input-email input {
+                font-size: 0.8rem;
+                padding: 5px;
+              }
+  
+              .btnEmail{
+                right: 90px;
+                width: 32px;
+                height: 32px;
+                 i {
+                font-size: 0.9rem;
+              }
+            }
+            }
+          }
+        }
+      }
+    }
+    }
+  }
+  
